# ultima-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MODERNIZATION.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  index.md  installation.md  quickstart.md
docs/api/: art.md  ascii_font.md  bodies.md  hues.md  index.md  settings.md  skills.md  tiledata.md
docs/formats/: index.md
scripts/: README.md  setup-dev.ps1  setup-dev.sh
tests/: __init__.py  test_import.py
ultimapy/: __init__.py
ultimapy/sdk/: __init__.py  animations.py  art.py  ascii_font.py  bodies.py  file_index.py  gumps.py  hues.py  skills.py  tile_data.py  utils.py  verdata.py
ultimapy/settings/: __init__.py  settings.py
