[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimapy"
version = "0.0.25"
authors = [
    {name = "Jack Ward", email = "jackward84@gmail.com"},
    {name = "JBob (NerdyGamers Fork)", email = "contact@uolostlands.com"}
]
description = "UltimaPy - Extract information and images from the UO client files"
readme = "README.md"
license = {text = "Beerware"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ultima online", "uo", "image rendering", "game assets", "servuo"]
dependencies = [
    "Pillow>=10.0.0",
    "imageio>=2.31.0",
]

[project.urls]
Homepage = "https://uolostlands.com"
Repository = "https://github.com/NerdyGamers/ultima-py"
"Original Repository" = "https://github.com/jackuoll/ultima-py"
"Bug Reports" = "https://github.com/NerdyGamers/ultima-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools]
packages = ["ultimapy", "ultimapy.sdk", "ultimapy.settings"]

[tool.setuptools.package-data]
ultimapy = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by black)
    "F403",  # star imports (legacy codebase)
    "F405",  # may be undefined from star imports (legacy codebase)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"tests/**" = ["E501"]  # long lines OK in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
follow_imports = "normal"
ignore_missing_imports = true
# Relax for legacy codebase
allow_untyped_calls = true
allow_untyped_defs = true
